--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h3>Software Engineer &amp; Full-Stack Developer.</h3>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              magna aliqua
             </p>
             <div class="row">
               <div class="col-lg-6">
