changed navbar link to index.html for portfolio pages

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
+          <h2>About Me</h2>
           <p>
             Vern Chien Chao
           </p>
@@ -105,7 +105,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>Nov 4, 1991</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+510 495 4532</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bay Area, California</span></li>
                 </ul>
@@ -120,10 +120,7 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. 
-              Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. 
-              Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Lorem ipsum
             </p>
           </div>
         </div>
@@ -311,9 +308,9 @@
         <div class="section-title">
           <h2>Resume</h2>
           <p>
-            Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid 
+            <!-- Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid 
             fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. 
-            Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.
+            Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas. -->
           </p>
         </div>
 
@@ -367,7 +364,7 @@
             <div class="resume-item">
               <h4>Teaching Intern at Franklin Elementary School</h4>
               <h5>August 2009 - June 2010</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <p><em>Franklin Elementary School, Oakland, CA</em></p>
               <ul>
                 <li>Provided a safe, educational and enjoyable environment for elementary students after school.</li>
                 <li>Supervised and provided tutoring and mentorship to a group of 10 students.</li>
@@ -644,7 +641,7 @@
         <div class="section-title">
           <h2>Contact</h2>
           <p>
-            Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.
+            Contact me for hiring inquiries 
           </p>
         </div>
 
