finished about me page

--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer &amp; Full-Stack Developer.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua
+              Basic Information
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -120,7 +119,16 @@
               </div>
             </div>
             <p>
-              Lorem ipsum
+              Hey! I'm Vern, a Full Stack Software Engineer.
+              <br/>
+              <br/>
+              I always had a curious mind of how things are structured. Software was one of those things and I loved coding every since my first "Hello World".
+              That being said, playing video games always made me think, "How do they make these games?".
+              After coding my first Javascript game, I will never underappreciate the amount of work put into the software.
+              <br/>
+              <br/>
+              I always knew my life and career would take me to the tech field, I just didn't know when.
+              On July of 2021, I joined the App Academy bootcamp and the rest is history.
             </p>
           </div>
         </div>
@@ -183,7 +191,7 @@
         <div class="section-title">
           <h2>Technology Stack</h2>
           <p>
-            <!-- text here-->
+            These are my tech-stack and I am constantly growing my knowledge.
           </p>
         </div>
 
