--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/portfolio/headshot2.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Vern C. Chao</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/vernchao91" class="github" target="_blank"><i class="bx bxl-github"></i></a>
@@ -93,7 +93,8 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <!-- <img src="assets/img/profile-img.jpg" class="img-fluid" alt=""> -->
+            <img src="assets/img/portfolio/headshot2.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer &amp; Full-Stack Developer.</h3>
@@ -122,8 +123,8 @@
               Hey! I'm Vern, a Full Stack Software Engineer.
               <br/>
               <br/>
-              I always had a curious mind of how things are structured. Software was one of those things and I loved coding every since my first "Hello World".
-              That being said, playing video games always made me think, "How do they make these games?".
+              Growing up I would play so many different games and I never put any thought into how the software was made.
+              After growing up I started getting curious about how things are structured. I would always ask myself, "How do they make these games?". 
               After coding my first Javascript game, I will never underappreciate the amount of work put into the software.
               <br/>
               <br/>
@@ -191,7 +192,7 @@
         <div class="section-title">
           <h2>Technology Stack</h2>
           <p>
-            These are my tech-stack and I am constantly growing my knowledge.
+            Ranked from 
           </p>
         </div>
 
