--- a/echo.html
+++ b/echo.html
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/portfolio/headshot2.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Vern C. Chao</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/vernchao91" class="github" target="_blank"><i class="bx bxl-github"></i></a>
