final push for production

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="section-title">
           <h2>Technology Stack</h2>
           <p>
-            Ranked from my most proficient programming language and framework, I'm constantly expanding my tech-stack.
+            Ranked by proficiency of languages and framework.
           </p>
         </div>
 
