revised echo.html

--- a/echo.html
+++ b/echo.html
@@ -125,7 +125,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Echo, Discord-clone</h2>
+              <h2>Echo</h2>
               <p>
                 Echo is a Discord-clone project I developed aimed at delivering some of the core features. 
                 I created this project as practice for Full-stack development and to gain experience for handling user input. 
