--- a/cutabove.html
+++ b/cutabove.html
@@ -125,7 +125,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>cutAbove, Mock-site</h2>
+              <h2>cutAbove</h2>
               <p>
                 cutAbove is a mock site for users and stylists. 
                 The stylist could be a freelancer, have their own establishment, or even just renting out their own chair at a salon, cutAbove is the site where they can expand their business.
