--- a/index.html
+++ b/index.html
@@ -675,6 +675,14 @@
                 <p>+1 510 495 4532</p>
               </div>
 
+              <div class="resume">
+                <i class="bi bi-file-earmark-arrow-down"></i>
+                <h4>Resume:</h4>
+                <p>
+                  <a href="Vern Chao Resume.pdf" target="_blank">Resume.pdf</a>
+                </p>
+              </div>
+
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
             </div>
 
