revised tech stack

--- a/cutabove.html
+++ b/cutabove.html
@@ -52,19 +52,19 @@
           <a href="https://github.com/vernchao91" class="github" target="_blank"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/vern-chao-a8201a1ba/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="https://angel.co/u/vern-chien-chao" class="facebook" target="_blank"><i class="fa fa-angellist"></i></a>
-          <a href="https://www.instagram.com/vernchao91/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
-          <a href="https://twitter.com/vernchao91" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
+          <!-- <a href="https://www.instagram.com/vernchao91/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a> -->
+          <!-- <a href="https://twitter.com/vernchao91" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a> -->
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
-          <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="index.html#home" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <!-- <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
+          <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav>
     </div>
