--- a/cutabove.html
+++ b/cutabove.html
@@ -127,7 +127,7 @@
             <div class="portfolio-description">
               <h2>cutAbove</h2>
               <p>
-                cutAbove is a mock site for users and stylists. 
+                cutAbove is a mock site for stylists and clients. 
                 The stylist could be a freelancer, have their own establishment, or even just renting out their own chair at a salon, cutAbove is the site where they can expand their business.
                 Consumers can look for a particular stylist with the built in search feature. You can either search stylist by name or by address so this way you can filter out what you need.
                 Once a stylist is found, the user can book appointments with the stylist and can send a photo for reference for what kind of style they want done. 
