--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
 
         <div class="section-title">
           <h2>Portfolio Projects</h2>
-          <!-- <p>These are some of my projects I created for practice and  -->
-          <!-- </p> -->
+          <p>These are personal projects created to display my skills and experiences with the technologies.
+          </p>
         </div>
 
         <div class="row" data-aos="fade-up">
