changed second filter

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-fullstack">Full Stack Projects</li>
-              <li data-filter=".filter-reactonrails">React-on-Rails</li>
+              <li data-filter=".filter-railsreact">Rails-React</li>
               <li data-filter=".filter-POJ">Vanilla JavaScript</li>
               <li data-filter=".filter-mern">MERN</li>
             </ul>
@@ -222,7 +222,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
           
-          <div class="col-lg-4 col-md-6 portfolio-item filter-fullstack filter-reactonrails">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-fullstack filter-railsreact">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/EchoSC.png" class="img-fluid" alt="">
               <div class="portfolio-links">
