added headline to portfolio projects

--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-fullstack filter-railsreact">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/EchoSC.png" class="img-fluid" alt="">
+              <p>
+                Echo is a clone of the popular application Disord.
+              </p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/EchoSC.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Echo"><i class="bx bx-plus"></i></a>
                 <a href="echo.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -240,6 +243,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-POJ">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/MR-menu.png" class="img-fluid" alt="">
+              <p>
+                MazeRunner is a 2D sky-view maze game.
+              </p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/MR-menu.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MazeRunner"><i class="bx bx-plus"></i></a>
                 <a href="mazerunner.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -251,6 +257,9 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-fullstack filter-mern">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/cutAbove.png" class="img-fluid" alt="">
+              <p>
+                cutAbove is a mock site for clients and hair stylists.
+              </p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/cutAbove.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="cutAbove"><i class="bx bx-plus"></i></a>
                 <a href="cutabove.html" title="More Details"><i class="bx bx-link"></i></a>
