took out portfolio project headline

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <br/>
               Growing up I would play so many different games and would design social websites like myspace and xanga. 
               I never really put any thought into how software was made and took it for granted.
-              I was the kid that had a typing speed of 70 wpm by the time I was in the 5th grade.
+              I was the kid that had a typing speed of 60 wpm by the time I was in the 5th grade.
               After growing up I started getting curious about how things are structured architecturally. I would always ask myself, "How do they make these games?".
               These softwares logically seemed really easy to make because I was always good at problem solving.
               After coding my first Javascript game, I will never underappreciate the amount of work put into a software.
@@ -209,8 +209,9 @@
 
         <div class="section-title">
           <h2>Portfolio Projects</h2>
-          <p>These are personal projects created to display my skills and experiences with the technologies.
-          </p>
+          <!-- <p>
+            These are personal projects created to display my skills and experiences with the technologies.
+          </p> -->
         </div>
 
         <div class="row" data-aos="fade-up">
