updated project info

--- a/cutabove.html
+++ b/cutabove.html
@@ -123,7 +123,8 @@
                 <li><strong>Category</strong>: Full-Stack Mock-site</li>
                 <li><strong>Technology</strong>: MongoDB/Express/React-Redux/Node</li>
                 <li><strong>Project date</strong>: October, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://pacific-sea-61217.herokuapp.com/#/" target="_blank">cutAbove</a></li>
+                <li><strong>Project Live Site</strong>: <a href="https://pacific-sea-61217.herokuapp.com/#/" target="_blank">cutAbove</a></li>
+                <li><strong>Github Repo</strong>: <a href="https://github.com/vernchao91/cutAbove" target="_blank">cutAbove Repo</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
