--- a/echo.html
+++ b/echo.html
@@ -122,7 +122,8 @@
                 <li><strong>Category</strong>: Full-Stack Discord clone</li>
                 <li><strong>Technology</strong>: React-Redux/Javscript/Ruby/Rails/PostgreSQL</li>
                 <li><strong>Project date</strong>: November, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://echo-discordclone.herokuapp.com/#/" target="_blank">Echo</a></li>
+                <li><strong>Project Live Site</strong>: <a href="https://echo-discordclone.herokuapp.com/#/" target="_blank">Echo</a></li>
+                <li><strong>Github Repo</strong>: <a href="https://github.com/vernchao91/Echo" target="_blank">Echo Repo</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
