--- a/mazerunner.html
+++ b/mazerunner.html
@@ -121,9 +121,10 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Game</li>
-                <li><strong>Technology</strong>: Vanilla JS</li>
+                <li><strong>Technology</strong>: Plain Old Javascript && Canvas</li>
                 <li><strong>Project date</strong>: December, 2021</li>
-                <li><strong>Project URL</strong>: <a href="https://vernchao91.github.io/Maze_Runner/" target="_blank">Maze_Runner</a></li>
+                <li><strong>Project Live Site</strong>: <a href="https://vernchao91.github.io/Maze_Runner/" target="_blank">MazeRunner</a></li>
+                <li><strong>Github Repo</strong>: <a href="https://github.com/vernchao91/Maze_Runner" target="_blank">MazeRunner Repo</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
