commented out favicon

--- a/mazerunner.html
+++ b/mazerunner.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <!-- <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -132,7 +132,8 @@
               <p>
                 For this project, I utilized Canvas API for image rendering and Vanilla JS DOM manipulation for the game play, which includes key-responsive players, asynchronous functions and efficient canvas updating. 
                 I also incorporated Web Audio API in order to add background music and sound effects to the game.
-                This project is built entirely with Canvas HTML element and Canvas API with Vanilla JS DOM manipulation for game play. I added key-responsive event listeners, and incorporated efficient canvas updates with requestAnimationFrame. 
+                This project is built entirely with Canvas HTML element and Canvas API with Vanilla JS DOM manipulation for game play. 
+                I added key-specific event listeners, and incorporated efficient canvas updates with requestAnimationFrame. 
                 I also added background music and manipulated the audio. The user can mute/unmute and can change the volume.
               </p>
             </div>
