revisiting mazerunner description

--- a/mazerunner.html
+++ b/mazerunner.html
@@ -130,11 +130,9 @@
             <div class="portfolio-description">
               <h2>MazeRunner 2D sky view game</h2>
               <p>
-                For this project, I utilized Canvas API for image rendering and Vanilla JS DOM manipulation for the game play, which includes key-responsive players, asynchronous functions and efficient canvas updating. 
-                I also incorporated Web Audio API in order to add background music and sound effects to the game.
-                This project is built entirely with Canvas HTML element and Canvas API with Vanilla JS DOM manipulation for game play. 
-                I added key-specific event listeners, and incorporated efficient canvas updates with requestAnimationFrame. 
-                I also added background music and manipulated the audio. The user can mute/unmute and can change the volume.
+                This project is built entirely with Canvas HTML element and Canvas API with Vanilla JS DOM manipulation (ES6).
+                I also incorporated Web Audio API in order to add background music to the game.
+                I added key-specific event listeners, and incorporated efficient canvas updates with requestAnimationFrame.
               </p>
             </div>
           </div>
