finished mazerunner description

--- a/mazerunner.html
+++ b/mazerunner.html
@@ -131,8 +131,13 @@
               <h2>MazeRunner 2D sky view game</h2>
               <p>
                 This project is built entirely with Canvas HTML element and Canvas API with Vanilla JS DOM manipulation (ES6).
-                I also incorporated Web Audio API in order to add background music to the game.
                 I added key-specific event listeners, and incorporated efficient canvas updates with requestAnimationFrame.
+                Background music is added to the game with Web Audio API.
+                MazeRunner is designed as composition paradigm with object oriented programming.
+                The player can move/pause/restart and mute the music. The player has 4 health points and can lose the game if the wraith attacks the player 4 times.
+                I added invisibility frames to the player when attacked and a cooldown to those frames for about 5 seconds.
+                There are doors that can only be opened by pressing a switch or using a key.
+                Find the exit in the maze to win!
               </p>
             </div>
           </div>
